refactor: small modernizations to user reader
I was experimenting with other things that I deleted but there's some good to keeping it clean.